1999-01-11  David Faure  <faure@kde.org>

	* kioslave/ftp.cpp: Follow links on ftp site. Fix found by 
	Sven Fischer <herpes@kawo2.rwth-aachen.de> (kb1551).
	I also removed calls to ksprintf (less secure than +=).

	* kioslave/file.cpp (OpenDir): Added a cache to reduce calls to 
	getpwuid and getgrgid. Improves speed, esp for NIS users (kb1536).
	Initial patch from Philipp Hullmann <hullmann@nano.uni-hannover.de>.

	* kbind.cpp: Store and use terminal settings (set in applnks) in
	KMimeBind.
	* kbind.h: Made findType private and called getMagicMimeType
	instead. Fixes the text in the status bar, and the hint for root icons.

1999-01-07  David Faure  <faure@kde.org>

	* kioslave/file.cpp (OpenDir): Added redirection if HTML View set and
 	opening index.html or .kde.html

1999-01-06  David Faure  <faure@kde.org>

	* kfmprops.*: Commented out the "Working Directory" line edit. It
	isn't used at all. Thanks to the old kb1297.

	* kioslave/ftp_proxy.cpp: Lots of fixes.

1999-01-04  David Faure  <faure@kde.org>

	* kfmgui.cpp: Fixed Tree View being initialized even if not shown.
	This speeds up A LOT navigation in kfm !
	
	* kfmserver.cpp: Applied patch from Andreas Pour for better magic
	file creation. (Removes annoying dialog box at startup).

	* kioslave/tar.cpp: Fixed tar protocol support. Uses sscanf
	instead of strtok. Should work with GNU tar and non-GNU tar, which 
	have a different date format.
	
1999-01-03  David Faure  <faure@kde.org>

	* kfmgui.cpp: Argh, another late bug. When entering a directory in
	a window, all other windows had out-of-date history menus (and
	clicking on one item brought you to another item!). Fixed by
	connecting an AboutToShow for the Go menu to a new method filling
	the go menu (slotUpdateHistoryMenu), taken out from slotUpdateHistory. 

	* krenamewin.cpp, kiojob.cpp: Made window always modal.
	The modal argument is used to know whether to call done(x) or emit
	result(...). Fixes bug introduced by Preston when copying and