@@ -34,7 +34,7 @@ QString* KFMClient::password = 0L;
 KFMServer::KFMServer() : KfmIpcServer()
 {
     // Create the password file if it does not exist
-    QString fn = kapp->localkdedir().data();
+    QString fn = kapp->localkdedir().copy();
     fn += "/share/apps/kfm/magic";
     FILE *f = fopen( fn.data(), "rb" );
     if ( f == 0L )
@@ -352,7 +352,7 @@ void KFMClient::slotAuth( const char *_password )
     
     if ( KFMClient::password->isNull() )
     {
-	QString fn = kapp->localkdedir().data();
+	QString fn = kapp->localkdedir().copy();
 	fn += "/share/apps/kfm/magic";
 	FILE *f = fopen( fn.data(), "rb" );
 	if ( f == 0L )
